correct sections align and minor changes

--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* base style */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -13,6 +15,8 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video, button, select {
     font-family:"Raleway";
 }
+
+/* mode light/dark */
 
 .darkModeButton {
     position: absolute;
@@ -48,6 +52,8 @@ time, mark, audio, video, button, select {
     color: #fff; 
 }
 
+/* title */
+
 h1 {
     color: #137DC5;
 }
@@ -60,6 +66,8 @@ h3 {
     padding-bottom: 15px;
     border-bottom: solid 1px #137DC5;
 }
+
+/* list */
 
 ul { 
     display: flex;
@@ -75,6 +83,8 @@ ul {
     color: #137DC5;
     font-size: 20px;
 }
+
+/* font awesome logos */
 
 .icons {
     display: flex;
@@ -103,8 +113,20 @@ ul {
     border-bottom: 1px solid #137DC5;
 }
 
+.cv-infos { 
+    padding: 30px;
+    display: flex;
+    gap: 100px;
+}
+
+/* div about me */
+
 .about-me {
     width: 50%;
+}
+
+.text-about {
+    text-align: justify;
 }
 
 .languages-infos {
@@ -127,9 +149,13 @@ ul {
     background-color: azure;
 }
 
+/* div profesional */
+
 .profesional {
     width: 50%;
 }
+
+/* div xp */
 
 .xp {
     display: flex;
@@ -138,19 +164,28 @@ ul {
 
 .job {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
     gap: 30px;
 }
 
-.cv-infos { 
-    padding: 30px;
-    display: flex;
-    gap: 100px;
+.job-name-date {
+    width: 30%;
 }
+
+.job-infos {
+    width: 70%;
+}
+
+/* div studies */
 
 .container-studies-list {
     display: flex;
-    flex-direction: row;
     gap: 30px;
+}
+
+.studies-name-date {
+    width: 30%
+}
+
+.studies-infos {
+    width: 70%;
 }
